--- a/src/components/Carou.style.css
+++ b/src/components/Carou.style.css
@@ -7,11 +7,13 @@
 }
 
 
+
 @media(max-width:320px){
     .car{
-      margin-left:-60px
-       
+      margin-left:-60px;
+     
        }
-      
+    
+     
 }
 
