--- a/src/pages/ProductPage.style.css
+++ b/src/pages/ProductPage.style.css
@@ -1,16 +1,20 @@
 .searchbtn{
-    margin-left: 50px;
+    width:50vw;
 }
 @media(max-width:320px){
 .page{
     display: flex;
     flex-wrap: wrap;
     width: 100vw;
-   
+    
 }
 
 .list{
     width:100vw;
+ 
+}
+.searchbtn{
+    width: 70vw;
    
 }
 
